Controller and models Users

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT=8080
+USER=userStore
+PASS=iNfTg1KCKpk1nhmV
+MONGODB_CONNECT=mongodb+srv://userStore:iNfTg1KCKpk1nhmV@clusterstore.guarp6q.mongodb.net/storeDB
